# kirodata

./: .env.example  Amit_Kumar_Mohanty_ML_Engineer_Resume.docx  LICENSE  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
.github/workflows/: deploy.yml
diabetic-optiscan/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
diabetic-optiscan/.github/workflows/: ci.yml
diabetic-optiscan/demo/: streamlit_app.py
diabetic-optiscan/scripts/: predict.py  train.py
diabetic-optiscan/src/optiscan/: __init__.py  api.py  config.py  inference.py
diabetic-optiscan/src/optiscan/engine/: __init__.py  metrics.py  train.py
diabetic-optiscan/src/optiscan/models/: vit.py
diabetic-optiscan/src/optiscan/preprocessing/: __init__.py  fundus.py  wavelet.py
diabetic-optiscan/tests/: test_inference.py  test_metrics.py  test_wavelet.py
dynamic-screen-companion/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
dynamic-screen-companion/.github/workflows/: ci.yml
dynamic-screen-companion/app/: __init__.py  config.py  main.py  schemas.py
dynamic-screen-companion/demo/: sample_screenshot.txt  streamlit_app.py
dynamic-screen-companion/docs/: architecture.md
dynamic-screen-companion/tests/: test_api.py  test_services.py
public/JARVIS/: index.html  jarvis.js  profile.js  styles.css
src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx
src/lib/: data.ts  utils.ts
(+24 files in other folders)
